PostsSimulator/target/generated-sources/antlr4/AntlrGrammarParserParser.java
// Generated from AntlrGrammarParser.g4 by ANTLR 4.7.1

    import grammar.Grammar;
    import grammar.objects.terminals.Terminal;
    import grammar.objects.terminals.Terminal.TerminalOption;
    import grammar.objects.nonterminals.NonTerminal;
    import grammar.rules.Rule;
    import grammar.objects.GrammarObject;
    import grammar.objects.nonterminals.translators.Translator;
    import grammar.objects.nonterminals.translators.Translator.Code;
    import grammar.objects.nonterminals.translators.Translator.TranslatorType;
    import grammar.objects.attributes.Attribute;
    import exceptions.grammar.CreateTranslatorWithCurrentCodeException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AntlrGrammarParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, LowName=15, Whitespace=16, 
		HighName=17, ClassName=18, Code=19, Args=20;
	public static final int
		RULE_parse = 0, RULE_terminalList = 1, RULE_terminal = 2, RULE_terminalOption = 3, 
		RULE_nonTerminalList = 4, RULE_nonTerminal = 5, RULE_startNonTerminal = 6, 
		RULE_ruleList = 7, RULE_ruleAttrs = 8, RULE_attribute = 9, RULE_translatorReturn = 10, 
		RULE_translatorArgs = 11, RULE_lineSeparator = 12, RULE_atLeastWhitespaces = 13, 
		RULE_maybeWhitespaces = 14;
	public static final String[] ruleNames = {
		"parse", "terminalList", "terminal", "terminalOption", "nonTerminalList", 
		"nonTerminal", "startNonTerminal", "ruleList", "ruleAttrs", "attribute", 
		"translatorReturn", "translatorArgs", "lineSeparator", "atLeastWhitespaces", 
		"maybeWhitespaces"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'terminals:'", "':'", "'{'", "','", "'}'", "'non-terminals:'", 
		"'start-non-terminal:'", "'rules:'", "'->'", "'$'", "'['", "']'", "'\r'", 
		"'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "LowName", "Whitespace", "HighName", "ClassName", "Code", 
		"Args"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AntlrGrammarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AntlrGrammarParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public String grammarName;
		public Grammar grammar;
		public TerminalListContext terminalListValue;
		public NonTerminalListContext nonTerminalListValue;
		public StartNonTerminalContext startNonTerminalValue;
		public RuleListContext ruleListValue;
		public List<LineSeparatorContext> lineSeparator() {
			return getRuleContexts(LineSeparatorContext.class);
		}
		public LineSeparatorContext lineSeparator(int i) {
			return getRuleContext(LineSeparatorContext.class,i);
		}
		public TerminalListContext terminalList() {
			return getRuleContext(TerminalListContext.class,0);
		}
		public NonTerminalListContext nonTerminalList() {
			return getRuleContext(NonTerminalListContext.class,0);
		}
		public StartNonTerminalContext startNonTerminal() {
			return getRuleContext(StartNonTerminalContext.class,0);
		}
		public RuleListContext ruleList() {
			return getRuleContext(RuleListContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParseContext(ParserRuleContext parent, int invokingState, String grammarName) {
			super(parent, invokingState);
			this.grammarName = grammarName;
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse(String grammarName) throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState(), grammarName);
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((ParseContext)_localctx).terminalListValue = terminalList();
			setState(31);
			lineSeparator();
			setState(32);
			((ParseContext)_localctx).nonTerminalListValue = nonTerminalList();
			setState(33);
			lineSeparator();
			setState(34);
			((ParseContext)_localctx).startNonTerminalValue = startNonTerminal();
			setState(35);
			lineSeparator();
			setState(36);
			((ParseContext)_localctx).ruleListValue = ruleList(_localctx.grammarName);
			 ((ParseContext)_localctx).grammar =  new Grammar(_localctx.grammarName, ((ParseContext)_localctx).terminalListValue.list, ((ParseContext)_localctx).nonTerminalListValue.list, ((ParseContext)_localctx).startNonTerminalValue.start, ((ParseContext)_localctx).ruleListValue.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalListContext extends ParserRuleContext {
		public List<Terminal> list;
		public TerminalContext terminalValue;
		public TerminalOptionContext optionValue;
		public AttributeContext attributeFirstValue;
		public AttributeContext attributeValue;
		public List<LineSeparatorContext> lineSeparator() {
			return getRuleContexts(LineSeparatorContext.class);
		}
		public LineSeparatorContext lineSeparator(int i) {
			return getRuleContext(LineSeparatorContext.class,i);
		}
		public List<MaybeWhitespacesContext> maybeWhitespaces() {
			return getRuleContexts(MaybeWhitespacesContext.class);
		}
		public MaybeWhitespacesContext maybeWhitespaces(int i) {
			return getRuleContext(MaybeWhitespacesContext.class,i);
		}
		public List<TerminalContext> terminal() {
			return getRuleContexts(TerminalContext.class);
		}
		public TerminalContext terminal(int i) {
			return getRuleContext(TerminalContext.class,i);
		}
		public List<TerminalOptionContext> terminalOption() {
			return getRuleContexts(TerminalOptionContext.class);
		}
		public TerminalOptionContext terminalOption(int i) {
			return getRuleContext(TerminalOptionContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterTerminalList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitTerminalList(this);
		}
	}

	public final TerminalListContext terminalList() throws RecognitionException {
		TerminalListContext _localctx = new TerminalListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_terminalList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			 ((TerminalListContext)_localctx).list =  new ArrayList(); 
			setState(75); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(41);
					lineSeparator();
					setState(42);
					maybeWhitespaces();
					setState(43);
					((TerminalListContext)_localctx).terminalValue = terminal();
					setState(50);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(44);
						maybeWhitespaces();
						setState(45);
						match(T__1);
						setState(46);
						maybeWhitespaces();
						setState(47);
						((TerminalListContext)_localctx).optionValue = terminalOption();
						 ((TerminalListContext)_localctx).terminalValue.term = new Terminal(((TerminalListContext)_localctx).terminalValue.term.getName(), ((TerminalListContext)_localctx).optionValue.option); 
						}
						break;
					}
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(52);
						maybeWhitespaces();
						setState(53);
						match(T__2);
						setState(54);
						maybeWhitespaces();
						setState(55);
						((TerminalListContext)_localctx).attributeFirstValue = attribute();
						 ((TerminalListContext)_localctx).terminalValue.term.getAttributes().put(((TerminalListContext)_localctx).attributeFirstValue.attr.getName(), ((TerminalListContext)_localctx).attributeFirstValue.attr); 
						setState(65);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(57);
								maybeWhitespaces();
								setState(58);
								match(T__3);
								setState(59);
								maybeWhitespaces();
								setState(60);
								((TerminalListContext)_localctx).attributeValue = attribute();
								 ((TerminalListContext)_localctx).terminalValue.term.getAttributes().put(((TerminalListContext)_localctx).attributeValue.attr.getName(), ((TerminalListContext)_localctx).attributeValue.attr); 
								}
								} 
							}
							setState(67);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
						}
						setState(68);
						maybeWhitespaces();
						setState(69);
						match(T__4);
						}
						break;
					}
					 _localctx.list.add(((TerminalListContext)_localctx).terminalValue.term); 
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalContext extends ParserRuleContext {
		public Terminal term;
		public Token name;
		public TerminalNode LowName() { return getToken(AntlrGrammarParserParser.LowName, 0); }
		public TerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitTerminal(this);
		}
	}

	public final TerminalContext terminal() throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_terminal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((TerminalContext)_localctx).name = match(LowName);
			 ((TerminalContext)_localctx).term =  new Terminal((((TerminalContext)_localctx).name!=null?((TerminalContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalOptionContext extends ParserRuleContext {
		public TerminalOption option;
		public Token name;
		public TerminalNode HighName() { return getToken(AntlrGrammarParserParser.HighName, 0); }
		public TerminalOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterTerminalOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitTerminalOption(this);
		}
	}

	public final TerminalOptionContext terminalOption() throws RecognitionException {
		TerminalOptionContext _localctx = new TerminalOptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_terminalOption);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((TerminalOptionContext)_localctx).name = match(HighName);
			 ((TerminalOptionContext)_localctx).option =  TerminalOption.valueOf((((TerminalOptionContext)_localctx).name!=null?((TerminalOptionContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTerminalListContext extends ParserRuleContext {
		public List<NonTerminal> list;
		public NonTerminalContext nonTerminalValue;
		public NonTerminalContext nonTerminal;
		public AttributeContext attributeFirstValue;
		public AttributeContext attributeValue;
		public List<LineSeparatorContext> lineSeparator() {
			return getRuleContexts(LineSeparatorContext.class);
		}
		public LineSeparatorContext lineSeparator(int i) {
			return getRuleContext(LineSeparatorContext.class,i);
		}
		public List<MaybeWhitespacesContext> maybeWhitespaces() {
			return getRuleContexts(MaybeWhitespacesContext.class);
		}
		public MaybeWhitespacesContext maybeWhitespaces(int i) {
			return getRuleContext(MaybeWhitespacesContext.class,i);
		}
		public List<NonTerminalContext> nonTerminal() {
			return getRuleContexts(NonTerminalContext.class);
		}
		public NonTerminalContext nonTerminal(int i) {
			return getRuleContext(NonTerminalContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public NonTerminalListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerminalList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterNonTerminalList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitNonTerminalList(this);
		}
	}

	public final NonTerminalListContext nonTerminalList() throws RecognitionException {
		NonTerminalListContext _localctx = new NonTerminalListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nonTerminalList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__5);
			 ((NonTerminalListContext)_localctx).list =  new ArrayList(); 
			setState(113); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(87);
					lineSeparator();
					setState(88);
					maybeWhitespaces();
					setState(89);
					((NonTerminalListContext)_localctx).nonTerminalValue = ((NonTerminalListContext)_localctx).nonTerminal = nonTerminal();
					setState(109);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(90);
						maybeWhitespaces();
						setState(91);
						match(T__2);
						setState(92);
						maybeWhitespaces();
						setState(93);
						((NonTerminalListContext)_localctx).attributeFirstValue = attribute();
						 ((NonTerminalListContext)_localctx).nonTerminal.nonterm.getAttributes().put(((NonTerminalListContext)_localctx).attributeFirstValue.attr.getName(), ((NonTerminalListContext)_localctx).attributeFirstValue.attr); 
						setState(103);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(95);
								maybeWhitespaces();
								setState(96);
								match(T__3);
								setState(97);
								maybeWhitespaces();
								setState(98);
								((NonTerminalListContext)_localctx).attributeValue = attribute();
								 ((NonTerminalListContext)_localctx).nonTerminal.nonterm.getAttributes().put(((NonTerminalListContext)_localctx).attributeValue.attr.getName(), ((NonTerminalListContext)_localctx).attributeValue.attr); 
								}
								} 
							}
							setState(105);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
						}
						setState(106);
						maybeWhitespaces();
						setState(107);
						match(T__4);
						}
						break;
					}
					 _localctx.list.add(((NonTerminalListContext)_localctx).nonTerminal.nonterm); 
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(115); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTerminalContext extends ParserRuleContext {
		public NonTerminal nonterm;
		public Token name;
		public TerminalNode HighName() { return getToken(AntlrGrammarParserParser.HighName, 0); }
		public NonTerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterNonTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitNonTerminal(this);
		}
	}

	public final NonTerminalContext nonTerminal() throws RecognitionException {
		NonTerminalContext _localctx = new NonTerminalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nonTerminal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((NonTerminalContext)_localctx).name = match(HighName);
			 ((NonTerminalContext)_localctx).nonterm =  new NonTerminal((((NonTerminalContext)_localctx).name!=null?((NonTerminalContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartNonTerminalContext extends ParserRuleContext {
		public NonTerminal start;
		public Token name;
		public AtLeastWhitespacesContext atLeastWhitespaces() {
			return getRuleContext(AtLeastWhitespacesContext.class,0);
		}
		public TerminalNode HighName() { return getToken(AntlrGrammarParserParser.HighName, 0); }
		public StartNonTerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startNonTerminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterStartNonTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitStartNonTerminal(this);
		}
	}

	public final StartNonTerminalContext startNonTerminal() throws RecognitionException {
		StartNonTerminalContext _localctx = new StartNonTerminalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_startNonTerminal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__6);
			setState(121);
			atLeastWhitespaces();
			setState(122);
			((StartNonTerminalContext)_localctx).name = match(HighName);
			 ((StartNonTerminalContext)_localctx).start =  new NonTerminal((((StartNonTerminalContext)_localctx).name!=null?((StartNonTerminalContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleListContext extends ParserRuleContext {
		public String grammarName;
		public List<Rule> list;
		public RuleAttrsContext ruleAttrsValue;
		public List<LineSeparatorContext> lineSeparator() {
			return getRuleContexts(LineSeparatorContext.class);
		}
		public LineSeparatorContext lineSeparator(int i) {
			return getRuleContext(LineSeparatorContext.class,i);
		}
		public List<MaybeWhitespacesContext> maybeWhitespaces() {
			return getRuleContexts(MaybeWhitespacesContext.class);
		}
		public MaybeWhitespacesContext maybeWhitespaces(int i) {
			return getRuleContext(MaybeWhitespacesContext.class,i);
		}
		public List<RuleAttrsContext> ruleAttrs() {
			return getRuleContexts(RuleAttrsContext.class);
		}
		public RuleAttrsContext ruleAttrs(int i) {
			return getRuleContext(RuleAttrsContext.class,i);
		}
		public RuleListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RuleListContext(ParserRuleContext parent, int invokingState, String grammarName) {
			super(parent, invokingState);
			this.grammarName = grammarName;
		}
		@Override public int getRuleIndex() { return RULE_ruleList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).enterRuleList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrGrammarParserListener ) ((AntlrGrammarParserListener)listener).exitRuleList(this);
		}
	}

	public final RuleListContext ruleList(String grammarName) throws RecognitionException {
		RuleListContext _localctx = new RuleListContext(_ctx, getState(), grammarName);
		enterRule(_localctx, 14, RULE_ruleList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__7);
			 ((RuleListContext)_localctx).list =  new ArrayList(); 
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				lineSeparator();
				setState(128);
				maybeWhitespaces();
				setState(129);
				((RuleListContext)_localctx).ruleAttrsValue = ruleAttrs(_localctx.grammarName);
				 _localctx.list.add(new Rule(((RuleListContext)_localctx).ruleAttrsValue.fromNonTerminal, ((RuleListContext)_localctx).ruleAttrsValue.grammarObjectsList)); 
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 || _la==T__13 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
